--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,12 @@
             android:id="@+id/native_ad_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show Native Ad" />
+            android:text="Show Small Native Ad" />
+        <Button
+            android:id="@+id/native_medium_ad_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Medium Native Ad" />
 
         <LinearLayout
             android:id="@+id/native_ad_container"
